--- a/settings.html
+++ b/settings.html
@@ -46,7 +46,11 @@
         <form>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" placeholder="Enter your username">
-
+             <label for="software update">Sofware Update</label>
+             <select name="" id="">
+                <option value="en">YES</option>
+                <option value="es">NO</option>
+             </select>
             <label for="language">Preferred Language:</label>
             <select id="language" name="language">
                 <option value="en">English</option>
