docs: comment added

--- a/login-page.html
+++ b/login-page.html
@@ -6,8 +6,12 @@
     <title>Login Page</title>
 </head>
 <body>
+
+    <!-- We created a fieldest for authentication section -->
     <fieldset>
+        <!-- We are giving a tittle to fieldset -->
         <legend>Login Authentication</legend>
+        <!-- Now created a form for user authentication submission -->
         <form action="">
             <br>
             <label for="mail">Email:</label>
