--- a/profile.html
+++ b/profile.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Your Profile</title>
-<style>
+<style >
   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: cyan;
   }
   .profile {
-    max-width: 600px;
+    max-width: 650px;
     margin: 20px auto;
     background: #fff;
     padding: 20px;
