--- a/settings.html
+++ b/settings.html
@@ -57,7 +57,7 @@
                 <option value="es">Spanish</option>
                 <option value="fr">French</option>
             </select>
-
+added color
             <button type="submit">Save Settings</button>
         </form>
     </div>
