--- a/settings.html
+++ b/settings.html
@@ -53,7 +53,7 @@
              </select>
             <label for="language">Preferred Language:</label>
             <select id="language" name="language">
-                <option value="en">English</option>
+                <option value="en">malayalam</option>
                 <option value="es">Spanish</option>
                 <option value="fr">French</option>
             </select>
